deployments/microservices/ingress-dynamic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ms.example.com
    http:
      paths:
      # Paths will be appended by the build-ingress.sh script
